# Sage-AI

./: .gitignore  CLAUDE.md  README.md  Steps.md
.claude/: CLAUDE.md  settings.json
api/: .env.example  pyproject.toml  run.ps1
api/app/: __init__.py  main.py
api/app/api/v1/routers/: billing.py  chat.py  profile.py  recipes.py  recognition.py  sage.py  seasons.py  wallet.py
api/app/core/: config.py  logging.py  security.py
api/app/db/: models.py  session.py
api/app/jobs/: compact_care_events.py
api/app/prompts/: __init__.py
api/app/schemas/: chat.py  profile.py  recipe.py  recognition.py  sage.py  seasons.py  wallet.py
api/app/services/: anthropic_client.py  billing.py  chat.py  credits.py  memory.py  recipe.py  recognition.py  sage_pet.py  seasons.py  storage.py
api/supabase/: schema.sql
api/tests/: test_billing.py  test_chat_context.py  test_credits.py  test_sage.py  test_seasons.py
docs/: ARCHITECTURE.md  ai-chat.md
mobile/: .env.example  .npmrc  app.json  babel.config.js  eas.json  package-lock.json  package.json
mobile/app/: _layout.tsx  almanac.tsx  shop.tsx  wallet.tsx
mobile/app/(auth)/: _layout.tsx  sign-in.tsx
mobile/app/(tabs)/: _layout.tsx  chats.tsx  cook.tsx  index.tsx  profile.tsx  recipes.tsx
mobile/app/chat/: [id].tsx
mobile/app/cook-mode/: [id].tsx
mobile/app/recipe/: [id].tsx
mobile/app/recognition/: [id].tsx
mobile/assets/images/: README.md
mobile/src/components/: BrandSplash.tsx  SageChefMark.tsx
mobile/src/lib/: api.ts  haptics.ts  layout.ts  supabase.ts
mobile/src/store/: auth.ts  recipe.ts  snackbar.ts  (+2 more)
(+39 files in other folders)
